I set the min-height to 100% for the html to ensure background image covers whole page

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,12 @@ body {
   src: url(../assets/hellodenverdisplayregular_v1.6.ttf);
 }
 
+
+html {
+  min-height: 100%;
+}
+
+
 .container {
   margin-top: 120px;
   box-shadow: 0 0 0.1vw 0.4vw #e0deb9fd, 0 0 0.4vw 0.6vw #e9d372,
